--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
     <div id = "builds" class = "topnav" style = "display: none;">
         <h1>Mobile Legends Items Guide</h1>
         <h5>Search for you favorite hero's meta build</h5>
-        <input class = "search" type = "text" placeholder = "Search..">
+        <input id = "myText" class = "search" type = "text" placeholder = "Search..">
+        <button id = "mysubmit">Submit</button>
+
+        <div id = "build-display"></div>
     </div>
    
 
