--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class = "off-screen-menu">
         <ul>
             <li>home</li>
-            <li>Heros</li>
+            <li>Heroes</li>
             <li>Tips and Tricks</li>
         </ul>
     </div>
@@ -112,5 +112,6 @@
    
 </body>
 </html>
+
 
 
