--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class = "title">mlnav</div>
         <ul class = "nav-links">
             <li><a href = "#" id = "main-link"> Home</a></li>
-            <li><a href = "#" id = "hero-links">Heros</a></li>
+            <li><a href = "#" id = "hero-links">Heroes</a></li>
             <li><a href = "#" id = "embs">Emblems</a></li>
             <li><a href = "#" id = "knowledge">Tips & Tricks</a></li>
             <li><a href = "#" id = "preperation">Recommended Builds</a></li>
@@ -112,6 +112,7 @@
    
 </body>
 </html>
+
 
 
 
