--- a/index.html
+++ b/index.html
@@ -2,43 +2,37 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KB1YT3R68V"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-KB1YT3R68V');
-    </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KB1YT3R68V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KB1YT3R68V');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hok Web</title>
     <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-    <div class = "off-screen-menu">
-        <ul>
-            <li>home</li>
-            <li>Heroes</li>
-            <li>Tips and Tricks</li>
-        </ul>
-    </div>
+    
 
     <!-- menu -->
     <nav>
         <div class = "title">mlnav</div>
         <ul class = "nav-links">
             <li><a href = "#" id = "main-link"> Home</a></li>
-            <li><a href = "#" id = "hero-links">Heroes</a></li>
+            <li><a href = "#" id = "hero-links">Heros</a></li>
             <li><a href = "#" id = "embs">Emblems</a></li>
             <li><a href = "#" id = "knowledge">Tips & Tricks</a></li>
             <li><a href = "#" id = "preperation">Recommended Builds</a></li>
         </ul>
-        <div class = "ham-menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div> 
+        <div class = "hamburger" id = "hamburger">
+            <span class = "bar"></span>
+            <span class = "bar"></span>
+            <span class = "bar"></span>
+        </div>
     </nav>
 
     <!-- Intro information -->
@@ -121,8 +115,5 @@
    
 </body>
 </html>
-
-
-
 
 
