--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <div id = "builds" class = "topnav" style = "display: none;">
         <h1>Mobile Legends Items Guide</h1>
-        <h5>Search for you favorite hero's meta build</h5>
+        <h5>Search for your favorite hero's meta build</h5>
         <input id = "myText" class = "search" type = "text" placeholder = "Search..">
         <button id = "mysubmit">Submit</button>
 
@@ -115,5 +115,6 @@
    
 </body>
 </html>
+
 
 
