--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hok Web</title>
+    <title>ML Navigator</title>
     <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
         <div class = "title">mlnav</div>
         <ul class = "nav-links">
             <li><a href = "#" id = "main-link"> Home</a></li>
-            <li><a href = "#" id = "hero-links">Heros</a></li>
+            <li><a href = "#" id = "hero-links">Heroes</a></li>
             <li><a href = "#" id = "embs">Emblems</a></li>
             <li><a href = "#" id = "knowledge">Tips & Tricks</a></li>
             <li><a href = "#" id = "preperation">Recommended Builds</a></li>
@@ -115,6 +115,7 @@
    
 </body>
 </html>
+
 
 
 
